--- a/passcodeview/build.gradle
+++ b/passcodeview/build.gradle
@@ -17,6 +17,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 
+group='com.github.praveenb'
+
 android {
     compileSdkVersion 27
     buildToolsVersion "27.0.3"
@@ -37,4 +39,3 @@ android {
 dependencies {
         compile 'com.android.support:support-annotations:27.0.2'
 }
-apply from: '../bintray.gradle'
