--- a/passcodeview/build.gradle
+++ b/passcodeview/build.gradle
@@ -20,8 +20,8 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.praveenb'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     // This is important, it will run lint checks but won't abort build
     lintOptions {
@@ -30,12 +30,12 @@ android {
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 28
 
         consumerProguardFiles 'proguard-rules.pro'
     }
 }
 
 dependencies {
-        compile 'com.android.support:support-annotations:27.0.2'
+    implementation 'com.android.support:support-annotations:28.0.0'
 }
